Fix organization participation graph z-index; organization name hover color

--- a/github-dark.css
+++ b/github-dark.css
@@ -31,7 +31,7 @@
   #forkqueue .instructions, .addon h4, #wiki-wrapper h1, #wiki-wrapper h2, #wiki-wrapper h3, #wiki-wrapper h2 strong,
   #wiki-wrapper h3 strong, .wikistyle h1, .wikistyle h2, .header a:hover, .header a:hover .mini-icon,
   .header a:hover .mega-icon:before, #footer a, #userbox a:hover, .header-logo-wordmark:hover span,
-  #userbox a:hover .mini-icon, .gist-item ul.meta>li>a:hover, #userbox a:hover,
+  #userbox a:hover .mini-icon, .gist-item ul.meta>li>a:hover, #userbox a:hover, .org-repo-name a:hover .repo-prefix,
   #userbox a:hover .mini-icon, a.browse-button:hover, a.browse-button:hover span, .full-word, .team-mention,
   .add-line-comment:before, .octicon-mark-github:hover:before, .header a:hover .octicon,
   .comment-header-actions li:hover .octicon, .zeroclipboard-link .octicon {
@@ -946,7 +946,7 @@
     background-position: -18px 0 !important;
   }
   /* Repo canvas */
-  .participation-graph {
+  .participation-graph canvas {
     z-index: 0 !important;
   }
   ul.repolist h3, ul.repolist .description, ul.repolist .updated-at, ul.repolist .fork-flag {
